Add sigleton controller for tocken package
