# routes/api.go
@@ -20,8 +20,8 @@ type HandlerContext struct {
 func RegisterAPIRoutes(router *mux.Router, server *server.APIServer) *mux.Router {
 
 	router.HandleFunc("/health", actions.HandleAPIHealth(server)).Methods("GET")
-	router.HandleFunc("/login", login.HandleLogin(server)).Methods("POST")
 
+	router.HandleFunc("/login", login.HandleLogin(server)).Methods("POST")
 	router.HandleFunc("/token", token.Handle(server)).Methods("POST")
 
 	router.PathPrefix("/swagger").Handler(httpSwagger.WrapHandler)
